Update the database

--- a/CuaHangTapHoas/CuaHangTapHoas/Views/SanPham/DetailSP.cshtml
+++ b/CuaHangTapHoas/CuaHangTapHoas/Views/SanPham/DetailSP.cshtml
@@ -91,7 +91,7 @@
             </dl>
             <div class="d-flex align-items-center gap-3 mt-3">
                 @Html.ActionLink("Trở về", "ContentSP", "", new { @class = "btn btn-primary" })
-                @Html.ActionLink("Sửa sản phẩm", "EditSP", "", new { id = Model.maSanPham }, new { @class = "btn btn-warning text-white" })
+                @Html.ActionLink("Sửa sản phẩm", "EditSP", "SanPham", new { id = Model.maSanPham }, new { @class = "btn btn-warning text-white" })
             </div>
         </div>
     </div>
