--- a/CuaHangTapHoas/CuaHangTapHoas/Views/HoaDon/Create.cshtml
+++ b/CuaHangTapHoas/CuaHangTapHoas/Views/HoaDon/Create.cshtml
@@ -19,11 +19,11 @@
             {
                 @Html.AntiForgeryToken()
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.NgayLap)
-                    @Html.EditorFor(model => model.NgayLap, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
-                    @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
-                </div>
+                @*<div class="form-group">
+                @Html.LabelFor(model => model.NgayLap)
+                @Html.EditorFor(model => model.NgayLap, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
+                @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
+            </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.MaTaiKhoan, "Tên Đăng Nhập")
@@ -72,7 +72,13 @@
                     <span id="totalAmount">@Model.TongTien.ToString("C")</span>
                 </div>
 
-                <input type="submit" value="Thêm Hóa Đơn" class="btn btn-primary" />
+                @*<input type="submit" value="Thêm Hóa Đơn" class="btn btn-primary" />*@
+                <div class="d-flex align-items-center gap-3 mt-3 ms-3">
+                    <div>
+                        @Html.ActionLink("Trở về", "ContentHD", "", new { @class = "btn btn-primary" })
+                    </div>
+                    <input type="submit" value="Thêm hóa đơn" class="btn btn-success" />
+                </div>
             }
         </div>
     </div>
