--- a/CuaHangTapHoas/CuaHangTapHoas/Views/HoaDon/Edit.cshtml
+++ b/CuaHangTapHoas/CuaHangTapHoas/Views/HoaDon/Edit.cshtml
@@ -72,7 +72,13 @@
                     <span id="totalAmount">@Model.TongTien</span>
                 </div>
 
-                <input type="submit" value="Cập Nhật Hóa Đơn" class="btn btn-primary" />
+                @*<input type="submit" value="Cập Nhật Hóa Đơn" class="btn btn-primary" />*@
+                <div class="d-flex align-items-center gap-3 mt-3 ms-3">
+                    <div>
+                        @Html.ActionLink("Trở về", "ContentHD", "HoaDon", new { @class = "btn btn-primary" })
+                    </div>
+                    <input type="submit" value="Thực hiện sửa" class="btn btn-warning text-white" />
+                </div>
             }
         </div>
     </div>
