--- a/CuaHangTapHoas/CuaHangTapHoas/Views/NhanVien/DetailsNV.cshtml
+++ b/CuaHangTapHoas/CuaHangTapHoas/Views/NhanVien/DetailsNV.cshtml
@@ -8,12 +8,12 @@
 <div>
     <div class="card shadow-sm mt-2 mx-3">
         <div class="card-body">
-            <h4><i class="fa-solid fa-circle-info text-success"></i> Chi tiết nhà cung cấp</h4>
+            <h4><i class="fa-solid fa-circle-info text-success"></i> Chi tiết nhân viên</h4>
         </div>
     </div>
     <div class="card mt-4 shadow-sm mx-3">
         <div class="card-body">
-            <h4 class="text-center text-success">THÔNG TIN CHI TIẾT NHÀ CUNG CẤP</h4>
+            <h4 class="text-center text-success">THÔNG TIN CHI TIẾT NHÂN VIÊN</h4>
             <dl class="dl-horizontal">
                 <dt>
                     @Html.DisplayNameFor(model => model.maNhanVien)
