--- a/CuaHangTapHoas/CuaHangTapHoas/Views/SanPham/DetailSP.cshtml
+++ b/CuaHangTapHoas/CuaHangTapHoas/Views/SanPham/DetailSP.cshtml
@@ -9,12 +9,12 @@
 <div>
     <div class="card shadow-sm mt-2 mx-3">
         <div class="card-body">
-            <h4><i class="fa-solid fa-circle-info text-success"></i> Chi tiết tài khoản</h4>
+            <h4><i class="fa-solid fa-circle-info text-success"></i> Chi tiết sản phẩm</h4>
         </div>
     </div>
     <div class="card mt-4 shadow-sm mx-3">
         <div class="card-body">
-            <h4 class="text-center text-success">THÔNG TIN CHI TIẾT TÀI KHOẢN</h4>
+            <h4 class="text-center text-success">THÔNG TIN CHI TIẾT SẢN PHẨM</h4>
             <dl class="dl-horizontal">
                 <dt>
                     @Html.DisplayNameFor(model => model.maSanPham)
